# scpd_mergesort

./: .gitignore  CMakeLists.txt  File_to_order.txt  data_generator.py  exec.py  machinefile  main.cpp  makefile  multi_exec.py  plot_speedup.py
common/: data_generation.cpp  data_generation.h  data_loading.cpp  data_loading.h  merge_implementations.cpp  merge_implementations.h  mychrono.cpp  pingpong.cpp  pingpong.h
mpi_divimpera_impl/: mpi_partitioning.cpp  script.sh  test.cpp  test1.cpp
mpi_impl/: mpi_divetimpera.cpp  mpi_divetimpera.h  mpi_divetimpera_grain.cpp  mpi_partitioning.cpp  mpi_partitioning.h
pthread_divimpera_impl/: pthread_mergesort.cpp  pthread_mergesort.h  pthread_mergesort_2.cpp  pthread_mergesort_2.h
pthread_impl/: pthread_divetimpera.cpp  pthread_divetimpera.h  pthread_divetimpera_uncontrolled.cpp  pthread_divetimpera_uncontrolled.h  pthread_mergesort.cpp  pthread_mergesort.h  pthread_partitioning.cpp  pthread_partitioning.h
serial_impl/: serial.cpp  serial.h
